Update notebooks for result analysis

--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "840d51ff",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "productcatalogservice-7476c969c8-5z2sn None\n"
+      "productcatalogservice-7476c969c8-5z2sn None\n",
+      "Questions:  43\n"
      ]
     }
    ],
@@ -30,7 +31,8 @@
     "    (test_case.scenario, question.id): question\n",
     "    for test_case in TEST_CASES\n",
     "    for question in test_case.questions\n",
-    "}\n"
+    "}\n",
+    "print(\"Questions: \", len(QUESTIONS_META))"
    ]
   },
   {
